# shiny

./: .gitignore  Cargo.toml  README.md
migrations/: 002_artifacts.sql
src/: config.rs  errors.rs  main.rs
src/api/: agent.rs  artifacts.rs  auth.rs  chat.rs  diary.rs  insights.rs  mod.rs  search.rs  travelers.rs  trips.rs  voice.rs
src/db/: mod.rs
src/models/: mod.rs  traveler.rs
src/services/: agent_tools.rs  artifacts.rs  diary_gen.rs  mod.rs  navigation.rs  ollama.rs  osm.rs  supertonic.rs  web_search.rs
src/services/insights/: events.rs  mod.rs  types.rs  weather.rs
traveler-app/: API_DOCS.md  Cargo.toml  LICENSE  README.md
traveler-app/migrations/: 001_init.sql
traveler-app/src/: config.rs  errors.rs  lib.rs  main.rs
traveler-app/src/api/: locations.rs  mod.rs
traveler-app/src/auth/: mod.rs
traveler-app/src/db/: mod.rs
traveler-app/src/models/: diary.rs  location.rs  trip.rs
traveler-app/src/services/: gpsd.rs  mod.rs  osm.rs  web_search.rs
voice/: download_vosk.py  lang_map.json  requirements.txt  start_supertonic.sh
web/: index.html
web/css/: app.css  artifacts.css  auth.css  hud-left.css  insight-cards.css  navigator.css  sphere.css  text-input.css  tokens.css  travel-panel.css
web/js/: accent.js  agent.js  api.js  app.js  artifactStore.js  artifacts.js  auth.js  gps.js  hudLeft.js  map.js  navigationApi.js  navigator.js  orbCanvas.js  preferences.js  settings.js  sphere.js  textInput.js  theme.js  trips.js  voice.js
web/js/insights/: insightCards.js  insightStore.js
web/skills/: traveler-api-tools.md
